syntax = "proto3";

import "wagers/demo_fair_coin_toss.proto";


package wagers;

// Define an enumeration for types of currencies.
enum Currency {
  CURRENCY_UNSPECIFIED = 0;
  BTC = 1;  // Bitcoin
}

message RockPaperScissorsWager {
  enum Choice {
    ROCK = 0;
    PAPER = 1;
    SCISSORS = 2;
  }

  Choice player_choice = 1;  // The player's choice.
}

message DiceWager {
  int32 number_to_beat = 1;  // The number that the roll must beat.
}

// This is a simple example wager. A person  
message RouletteWager {
  int32 number_guessed = 1;  // The number that the player guesses.
  float amount = 2; // how much did they bet
  Currency currency = 3;
}


message Wager {
  oneof wager_type {
    RockPaperScissorsWager rock_paper_scissors = 1;
    DiceWager dice_wager = 2;
    RouletteWager roulette_wager = 3;
    DemoFairCoinToss demo_fair_coin_toss = 4;
  }
}
